--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b>Under-Review</b>
+      <b style="color: blue;">Under-Review</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun
+      <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
@@ -57,7 +57,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b>ICCV 2025</b> 
+      <b style="color: blue;">ICCV 2025</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Byung Hyun Lee, <b>Wongi Jeong</b>, Woojae Han, Kyoungbun Lee, Se Young Chun
@@ -78,7 +78,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: red;">ICML 2025</b> 
+      <b style="color: blue;">ICML 2025</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Hoigi Seo*, <b>Wongi Jeong*</b>, Jae-sun Seo, Se Young Chun (*co-first)
@@ -99,10 +99,10 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       [<a href="https://github.com/ignoww/ZOODiP">code</a>]
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b>CVPR 2025</b>
+      <b style="color: blue;">CVPR 2025</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      Hoigi Seo*, <b style="color: blue;">Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
+      Hoigi Seo*, <b>Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
@@ -113,10 +113,13 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: red;">ISMRM 2025 (Oral)</b> Harmonization for a black-box deep learning model
+      Harmonization for a black-box deep learning model
+    </p>
+    <p>
+      <b style="color: blue;">ISMRM 2025 (Oral)</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      Minjun Kim, Hwihun Jeong, Hoigi Seo, <b style="color: blue;">Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
+      Minjun Kim, Hwihun Jeong, Hoigi Seo, <b>Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
     </p>
   </div>
 </div>
@@ -130,15 +133,18 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <img src="assets/KLAP.png" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
-      <b style="color: red;">ICCV 2023</b> Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] 
       [<a href="https://ignoww.github.io/KLAP_project">project</a>] 
       [<a href="https://github.com/ignoww/KLAP">code</a>]
     </p>
-    <p style="font-size: 13px;">
-      Haechang Lee*, Dongwon Park*, <b style="color: blue;">Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, Se Young Chun (*co-first)
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      <b style="color: blue;">ICCV 2023</b> 
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Haechang Lee*, Dongwon Park*, <b>Wongi Jeong*</b>, Kijeong Kim, Hyunwoo Je, Dongil Ryu, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
@@ -150,12 +156,15 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
   <!-- text -->
   <div style="flex: 1; padding: 10px;">
-    <p style="font-size: 13px;">
-      <b style="color: red;">ICCVW 2023 (Oral)</b> Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
     </p>
-    <p style="font-size: 13px;">
-      Haechang Lee*, <b style="color: blue;">Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, Se Young Chun** (*co-first, **co-corresponding)
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      <b style="color: blue;">ICCVW 2023 (Oral)</b>
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Haechang Lee*, <b>Wongi Jeong*</b>, Dongil Ryu*, Hyunwoo Je, Albert No, Kijeong Kim**, Se Young Chun** (*co-first, **co-corresponding)
     </p>
   </div>
 </div>
