--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 </ul>
 
 <h2>Researches</h2>
-<div style="font-size: 15px;">
+<div style="font-size: 23px;">
   <b>2025</b>
   
 </div>
@@ -35,7 +35,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">Under-Review</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -115,7 +115,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Harmonization for a black-box deep learning model
     </p>
-    <p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">ISMRM 2025 (Oral)</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -124,7 +124,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
 </div>
 
-<div style="font-size: 15px;">
+<div style="font-size: 23px;">
   <b>2023</b>
 </div>
 
