--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       Harmonization for a black-box deep learning model
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: blue;">ISMRM 2025 (Oral)</b>
+      <b style="color: blue;">ISMRM 2025 (Oral, Summa cumme laude)</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Minjun Kim, Hwihun Jeong, Hoigi Seo, <b>Wongi Jeong</b>, Juhyung Park, Se Young Chun, Jongho Lee
