--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Efficient Personalization of Quantized Diffusion Model without Backpropagation
-      [<a style="color: blue;" href="https://openaccess.thecvf.com/content/CVPR2025/html/Seo_Efficient_Personalization_of_Quantized_Diffusion_Model_without_Backpropagation_CVPR_2025_paper.html">paper</a>] 
-      [<a href="https://arxiv.org/abs/2503.14868">arXiv</a>] 
-      [<a href="https://ignoww.github.io/ZOODiP_project">project</a>] 
-      [<a href="https://github.com/ignoww/ZOODiP">code</a>]
+      <span style="color: #1E90FF;">[<a href="https://openaccess.thecvf.com/content/CVPR2025/html/Seo_Efficient_Personalization_of_Quantized_Diffusion_Model_without_Backpropagation_CVPR_2025_paper.html" style="color: #1E90FF;">paper</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2503.14868" style="color: #1E90FF;">arXiv</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://ignoww.github.io/ZOODiP_project" style="color: #1E90FF;">project</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/ZOODiP" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">CVPR 2025, CVPRW (EDGE) 2025</b>
