--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-      [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>] 
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span>
+<!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
@@ -52,7 +53,8 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Continual Multiple Instance Learning with Enhanced Localization for Histopathological Whole Slide Image Analysis
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-      [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>] 
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.02395" style="color: #1E90FF;">arXiv</a>]</span>
+<!--       [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
@@ -73,7 +75,8 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
-      [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>] 
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2502.08690" style="color: #1E90FF;">arXiv</a>]</span>
+<!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
@@ -135,10 +138,14 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Efficient Unified Demosaicing for Bayer and Non-Bayer Patterned Image Sensors
-      [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] 
+      <span style="color: #1E90FF;">[<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html" style="color: #1E90FF;">paper</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2307.10667" style="color: #1E90FF;">arXiv</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://ignoww.github.io/KLAP_project" style="color: #1E90FF;">project</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/KLAP" style="color: #1E90FF;">code</a>]</span>
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>] 
       [<a href="https://arxiv.org/abs/2307.10667">arXiv</a>] 
       [<a href="https://ignoww.github.io/KLAP_project">project</a>] 
-      [<a href="https://github.com/ignoww/KLAP">code</a>]
+      [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">ICCV 2023</b> 
@@ -158,7 +165,8 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Fully Quantized Always-on Face Detector Considering Mobile Image Sensors
-      [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>]
+      <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2311.01001" style="color: #1E90FF;">arXiv</a>]</span>
+<!--       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>] -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">ICCVW 2023 (Oral)</b>
