--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/ZOODiP" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b style="color: blue;">CVPR 2025, CVPRW (EDGE) 2025</b>
+      <b style="color: blue;">CVPR 2025 / CVPRW (EDGE) 2025</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Hoigi Seo*, <b>Wongi Jeong*</b>, Kyungryeol Lee, Se Young Chun (*co-first)
