--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 
 <h2>Introduce</h2>
 <p style="font-size: 13px;">
-I am a third-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
+I am a fourth-year MS/Ph.D student in electrical and computer engineering (ECE) at Seoul National University (SNU), advised by Prof. <a href="https://icl.snu.ac.kr/pi">Se Young Chun</a>.
 I earned my B.S degree in electrical and computer engineering (ECE) from Seoul National University (SNU).
 </p>
 
