--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span>
 <!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
-<!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+      <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/RALU" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">Under-Review</b>
