--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+      <span style="color: #1E90FF;">[<a href="https://github.com/Hyun1A/CoMEL" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b style="color: blue;">ICCV 2025</b> 
