--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://arxiv.org/abs/2507.02395">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
+      <span style="color: #1E90FF;">[<a href="https://hyun1a.github.io/comel.io/" style="color: #1E90FF;">project</a>]</span>
       <span style="color: #1E90FF;">[<a href="https://github.com/Hyun1A/CoMEL" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -77,6 +78,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       Skrr: Skip and Re-use Text Encoder Layers for Memory Efficient Text-to-Image Generation
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2502.08690" style="color: #1E90FF;">arXiv</a>]</span>
+      <span style="color: #1E90FF;">[<a href="https://ignoww.github.io/Skrr_project/" style="color: #1E90FF;">project</a>]</span>
 <!--       [<a href="https://arxiv.org/abs/2502.08690">arXiv</a>]  -->
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
