--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 </div>
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/RALU.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/RALU.png" class="teaser img-fluid z-depth-1" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
