--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/Comel.png" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/Comel.png" class="shadow" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -76,7 +76,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/Skrr.png" alt="ICML25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/Skrr.png" class="shadow" alt="ICML25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -99,7 +99,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/ZOODiP.png" alt="CVPR25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/ZOODiP.png" class="shadow" alt="CVPR25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -120,7 +120,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/ISMRM25.png" alt="ISMRM25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/ISMRM25.png" class="shadow" alt="ISMRM25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -141,7 +141,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/KLAP.png" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/KLAP.png" class="shadow" alt="ICCV23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -167,7 +167,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <!-- image -->
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/QFD.png" alt="ICCVW23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/QFD.png" class="shadow" alt="ICCVW23 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <!-- text -->
   <div style="flex: 1; padding: 10px;">
