--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <h2>Researches</h2>
 <div style="font-size: 23px;">
-  <b>2025</b>
-  
+  <b>2026</b>
 </div>
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/RALU.png" class="shadow" alt="ICCV25 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/RALU.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      Upsample What Matters: Region-Adaptive Latent Sampling for Accelerated Diffusion Transformers
+      Training-free Mixed-Resolution Latent Upsampling for Spatially Accelerated Diffusion Transformers
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span>
 <!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
@@ -42,12 +41,38 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/RALU" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
-      <b style="color: blue;">Under-Review</b>
+      <b style="color: blue;">CVPR 2026</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun (*co-first)
     </p>
   </div>
+</div>
+
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <div style="flex: 0 0 25%; padding: 10px;">
+    <img src="assets/RALU.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+  </div>
+  <div style="flex: 1; padding: 10px;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      Training-free, Perceptually Consistent Low-Resolution Previews with High-Resolution Image for Efficient Workflows of Diffusion Models
+<!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
+      <!-- <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span> -->
+<!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
+<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+      <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/RALU" style="color: #1E90FF;">code</a>]</span>
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
+      <b style="color: blue;">CVPR 2026</b>
+    </p>
+    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+      <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun (*co-first)
+    </p>
+  </div>
+</div>
+
+<div style="font-size: 23px;">
+  <b>2025</b>
 </div>
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
