--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <b style="color: blue;">CVPR 2026</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
-      <b>Wongi Jeong*</b>, Kyungryeol Lee*, Hoigi Seo, Se Young Chun (*co-first)
+      <b>Wongi Jeong*</b>, Hoigi Seo*, Se Young Chun (*co-first)
     </p>
   </div>
 </div>
