--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span>
 <!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
-<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+      [<a href="https://ignoww.github.io/RALU_project">project</a>] 
       <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/RALU" style="color: #1E90FF;">code</a>]</span>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
@@ -49,7 +49,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
 </div>
 
-<div style="display: flex; align-items: center; margin-bottom: 20px;">
+<!-- <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
     <img src="assets/RALU.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
@@ -69,7 +69,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <b>Wongi Jeong*</b>, Hoigi Seo*, Se Young Chun (*co-first)
     </p>
   </div>
-</div>
+</div> -->
 
 <div style="font-size: 23px;">
   <b>2025</b>
