--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
   </div>
 </div>
 
-<!-- <div style="display: flex; align-items: center; margin-bottom: 20px;">
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
     <img src="assets/RALU.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
@@ -69,7 +69,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <b>Wongi Jeong*</b>, Hoigi Seo*, Se Young Chun (*co-first)
     </p>
   </div>
-</div> -->
+</div>
 
 <div style="font-size: 23px;">
   <b>2025</b>
