--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://hyun1a.github.io/comel.io/" style="color: #1E90FF;">project</a>]</span>
       <span style="color: #1E90FF;">[<a href="https://github.com/Hyun1A/CoMEL" style="color: #1E90FF;">code</a>]</span>
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">ICCV 2025</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -113,7 +113,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
 <!--       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">ICML 2025</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -134,7 +134,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://ignoww.github.io/ZOODiP_project" style="color: #1E90FF;">project</a>]</span>
       <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/ZOODiP" style="color: #1E90FF;">code</a>]</span>
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">CVPR 2025 / CVPRW (EDGE) 2025</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -151,7 +151,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
       Harmonization for a black-box deep learning model
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">ISMRM 2025 (Oral, Summa cum laude)</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -180,7 +180,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       [<a href="https://ignoww.github.io/KLAP_project">project</a>] 
       [<a href="https://github.com/ignoww/KLAP">code</a>] -->
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">ICCV 2023</b> 
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -201,7 +201,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
       <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2311.01001" style="color: #1E90FF;">arXiv</a>]</span>
 <!--       [<a href="https://arxiv.org/abs/2311.01001">arXiv</a>] -->
     </p>
-    <p style="font-size: 13px; line-height: 1.4; margin: 0;">
+    <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
       <b style="color: blue;">ICCVW 2023 (Oral)</b>
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
