--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/Preview" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <img src="assets/Preview.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
@@ -59,7 +59,7 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 <!--       [<a href="https://openaccess.thecvf.com/content/ICCV2023/html/Lee_Efficient_Unified_Demosaicing_for_Bayer_and_Non-Bayer_Patterned_Image_Sensors_ICCV_2023_paper.html">paper</a>]  -->
       <!-- <span style="color: #1E90FF;">[<a href="https://arxiv.org/abs/2507.08422" style="color: #1E90FF;">arXiv</a>]</span> -->
 <!--       [<a href="https://arxiv.org/abs/2507.08422">arXiv</a>]  -->
-<!--       [<a href="https://ignoww.github.io/KLAP_project">project</a>]  -->
+      <span style="color: #1E90FF;">[<a href="https://ignoww.github.io/Preview_project"style="color: #1E90FF;">project</a>]</span>
       <!-- <span style="color: #1E90FF;">[<a href="https://github.com/ignoww/RALU" style="color: #1E90FF;">code</a>]</span> -->
     </p>
     <p style="font-size: 13px; line-height: 1.4; margin: 0; font-style: italic;">
