--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@ While I am interested in both Natural Language Processing (NLP) and Computer Vis
 
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="flex: 0 0 25%; padding: 10px;">
-    <img src="assets/Preview.png" class="shadow" alt="CVPR26 Thumbnail" style="width: 100%; height: auto; border-radius: 8px;">
+    <video src="assets/mammoth.mp4"
+           class="shadow"
+           style="width: 100%; height: auto; border-radius: 8px;"
+           autoplay loop muted playsinline>
+    </video>
   </div>
   <div style="flex: 1; padding: 10px;">
     <p style="font-size: 13px; line-height: 1.4; margin: 0;">
